z-index fix for brick frame

--- a/src/components/baseComponents/PhoneTopBrick16x9.scss
+++ b/src/components/baseComponents/PhoneTopBrick16x9.scss
@@ -13,7 +13,7 @@
   .level-and-length {
     position: absolute;
     border-radius: 12vh;
-    z-index: 2;
+    z-index: 10;
     top: 1vh;
     right: 1vh;
     width: 12.6vh;
